--- a/src/main/webapp/app/preventivoUpdate.xhtml
+++ b/src/main/webapp/app/preventivoUpdate.xhtml
@@ -93,9 +93,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -109,9 +109,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -123,9 +123,9 @@
                                                      value="#{preventivoController.item.burletePuerta}" required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -137,9 +137,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -153,9 +153,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -169,9 +169,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -183,9 +183,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -202,9 +202,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -216,9 +216,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -235,9 +235,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -251,9 +251,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -265,9 +265,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -280,9 +280,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -294,9 +294,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -308,9 +308,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -323,9 +323,9 @@
                                                      required="true"
                                                      disabled="#{preventivoController.readOnly or not (authorizationChecker.admin or authorizationChecker.completado) }">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
