--- a/src/main/webapp/app/preventivoCreate.xhtml
+++ b/src/main/webapp/app/preventivoCreate.xhtml
@@ -89,9 +89,9 @@
                                     <p:selectOneMenu id="alarmaPuerta" value="#{preventivoController.item.alarmaPuerta}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -104,9 +104,9 @@
                                                      value="#{preventivoController.item.cerraduraPuerta}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -117,9 +117,9 @@
                                     <p:selectOneMenu id="burletePuerta"
                                                      value="#{preventivoController.item.burletePuerta}" required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -130,9 +130,9 @@
                                     <p:selectOneMenu id="baterias" value="#{preventivoController.item.baterias}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -145,9 +145,9 @@
                                                      value="#{preventivoController.item.cableadoYConectores}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -160,9 +160,9 @@
                                                      value="#{preventivoController.item.cableadoYConectorEth}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -173,9 +173,9 @@
                                     <p:selectOneMenu id="estadoFiltro" value="#{preventivoController.item.estadoFiltro}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -191,9 +191,9 @@
                                     <p:selectOneMenu id="limpieza" value="#{preventivoController.item.limpieza}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -204,9 +204,9 @@
                                     <p:selectOneMenu id="seguridad" value="#{preventivoController.item.seguridad}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -222,9 +222,9 @@
                                     <p:selectOneMenu id="balizas" value="#{preventivoController.item.balizas}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -237,9 +237,9 @@
                                                      value="#{preventivoController.item.cableFeederJumpers}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -250,9 +250,9 @@
                                     <p:selectOneMenu id="conectores" value="#{preventivoController.item.conectores}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -263,9 +263,9 @@
                                     <p:selectOneMenu id="aterramientos"
                                                      value="#{preventivoController.item.aterramientos}" required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -275,9 +275,9 @@
                                 <p:column>
                                     <p:selectOneMenu id="tma" value="#{preventivoController.item.tma}" required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -287,9 +287,9 @@
                                 <p:column>
                                     <p:selectOneMenu id="rrh" value="#{preventivoController.item.rrh}" required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
@@ -301,9 +301,9 @@
                                     <p:selectOneMenu id="encintados" value="#{preventivoController.item.encintados}"
                                                      required="true">
                                         <o:converter converterId="entityListConverter"
-                                                     list="#{preventivoController.estadoPreventivoList}"/>
+                                                     list="#{preventivoController.estadoList}"/>
                                         <f:selectItem itemLabel="Sin especificar" noSelectionOption="true"/>
-                                        <f:selectItems value="#{preventivoController.estadoPreventivoList}" var="item"
+                                        <f:selectItems value="#{preventivoController.estadoList}" var="item"
                                                        itemLabel="#{item.nombre}" itemValue="#{item}"/>
                                     </p:selectOneMenu>
                                 </p:column>
